# xrdp

./: Makefile.am  configure.ac
debian/: changelog  control  init.d  rules
debian/patches/: 01reuse-session.patch  04quiet_start.patch  05-default-keymap.patch  06-xrdp_pidfile_early.patch  08-format-security.patch  series
gopcnx-xup/: Makefile.am  gopcnx-xup.c  gopcnx-xup.h
nx-vnc/: Makefile.am  nx-vnc.c  nx-vnc.h
nx-xup/: Makefile.am  nx-xup.c  nx-xup.h
sesman/: scp_v0.c  scp_v1.c  sesman.ini  session.c  session.h  verify_user_pam.c
sesman/chansrv/: chansrv.c  sound.c
sesman/chansrv/pulse/: module-xrdp-sink-symdef.h  module-xrdp-sink.c  module-xrdp-source-symdef.h  module-xrdp-source.c
xrdp/: xrdp.ini  xrdp_mm.c  xrdp_wm.c
xup/: xup.c
